# stable-fluids-method

./: .gitignore  CMakeLists.txt  PLAN.md
src/app/: main.cpp
src/core/: Config.h  Grid.h  MathHelpers.h
src/render/: Renderer.cpp  Renderer.h
src/solver/: ISolver.h  StamSolver.cpp  StamSolver.h
